--- a/style.css
+++ b/style.css
@@ -28,9 +28,11 @@ body{
     left: 0;
 }
 nav {
-    padding: 2rem 0;
-    background: rgb(43, 56, 69);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+	padding: 2rem 0;
+	background: rgb(43, 56, 69);
+	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47);
+	z-index: 20000000;
+	position: relative;
 }
 nav h1{
 	font-size: 1rem;
@@ -46,6 +48,15 @@ nav button{
 	border: none;
 	background: none;
 	color: white;
+}
+.mini-button{
+	border: none;
+	color: white;
+	padding: 0.5rem 1.5rem;
+	background-color: rgb(43, 56, 69);
+    border-radius: 3px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.47); 
+    cursor: pointer;
 }
 /*------------------------------*/
 .search-options {
@@ -124,4 +135,51 @@ nav button{
 }
 .country-card ul{
     list-style: none;
+}
+.country-detail-container {
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-top: 7rem;
+}
+.return-button{
+	margin-left: 2rem;
+	font-size: 1.1rem;
+}
+.country-details{
+	margin: auto;
+	width: 90%;
+	margin-top: 4rem;
+}
+.country-details h2 {
+	padding-left: 1rem;
+	margin-bottom: 1.5rem;
+}
+.country-details img {
+	width: 95%;
+	border-radius: 2px;
+	margin: auto;
+	margin-bottom: 3rem;
+	display: inherit;
+}
+.country-details div ul {
+	list-style: none;
+	padding-left: 1rem;
+	margin-bottom: 1.5rem;
+}
+
+.country-details div li{
+    line-height: 2rem;
+}
+.border-container {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 1rem;
+	flex-wrap: wrap;
+	width: 100%;
+}
+.border-container button {
+	font-size: 0.7rem;
+	margin-bottom: 1rem;
 }
